--- a/static/style.css
+++ b/static/style.css
@@ -520,7 +520,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.3rem;
-  font-family: "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: "Montserrat", 'hamnosysunicoderegular', -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   font-weight: 500;
   line-height: 1.2;
   color: #5a5a5a;
@@ -532,6 +532,10 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: 2rem;
+}
+
+.h2 hamnosys {
+  font-family: 'hamnosysunicoderegular';
 }
 
 h3, .h3 {
@@ -680,7 +684,7 @@ footer {
 
 @media screen and (max-width: 767px) {
       .sidenav {
-        height: auto;
+        height: 100%;
         padding: 15px;
       }
       .row.content {height: auto;} 
@@ -748,7 +752,7 @@ pre code {
   padding-left: 5px;
   margin-right: auto;
   margin-left: auto;
-  padding-bottom: 15px;
+  padding-bottom: 20px;
   padding-top: 30px;
 	
 }
