--- a/templates/word_example_random.html
+++ b/templates/word_example_random.html
@@ -98,7 +98,7 @@
                                     <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen></iframe>
                                 </div>    
                                 <div class="carousel-caption">
-                                  <h3>Коала</h3>
+                                  <p class=hamnosys></p>  
                                   <p><i>Новосиб.</i></p>
                                 </div>
                               </div>
@@ -109,8 +109,9 @@
                                 <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen></iframe>
                                 </div>
                                 <div class="carousel-caption">
-                                  <h3>Коала</h3>
-                                  <p><i>Московск.</i></p>
+                                  
+                                  <p class=hamnosys style='margin-bottom:0'></p>
+                                  <p style='margin-bottom:0; margin-top:0'><i>Московск.</i></p>
                                 </div>
                               </div>
 
@@ -119,8 +120,8 @@
                                     <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen></iframe>
                                 </div>
                                 <div class="carousel-caption">
-                                  <h3>New York</h3>
-                                  <p>We love the Big Apple!</p>
+                                  <p class=hamnosys style='margin-bottom:0'></p>
+                                  <p style='margin-bottom:0, margin-top:0'><i>Разговорн.</i></p>
                                 </div>
                               </div>
 
@@ -143,32 +144,9 @@
                   <!--/div-->
                    
               </div>
-            
+                        
              
-             
-             <div class='container'>
-                <h5 align="right"> <a href="#collapse1" data-toggle="collapse"> Варианты произнесения </a> </h5>
-                 <div id="collapse1" class="collapse">
-                     <div class="card border-light">
-                         <div class="card-body">
-                             <blockquote class="card-blockquote">
-
-                             
-                                 <div class="media">
-                 
-                                    <div class="embed-responsive embed-responsive-16by9">                   
-                                        <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen>
-                                   
-                                        </iframe>
-                                    </div>
-                                 
-                                 </div>
-                             </blockquote>
-                         </div>
-                     </div>
-                 </div>
-              </div>
-             
+                    
              
              <div class='container'>
                  <div class="card border-warning">
@@ -182,8 +160,7 @@
                  
                                 <div class="embed-responsive embed-responsive-16by9">                   
                                     <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen>
-                                   
-                                        
+                                                                               
                                     </iframe>
                                 </div>
                                  </div>
@@ -200,22 +177,16 @@
                     
                     
                             
-                        <h4>Запись в системе HamNoSys </h4>
-                            <p class=hamnosys></p>
-
-                        <h4>  Перевод </h4>
+                    <h4>  Перевод </h4>
                     <div class="card border-light">
                           <div class="card-body">
                                 <blockquote class="card-blockquote">
-                     <p> 1.<i> глаг. </i> Коала </p> 
-                     <a  href="#collapse4" data-toggle="collapse"> <p align="center"> Примеры </p></a>
-                    
-                     <div id="collapse4" class="collapse">
-                         <div class='container'>
+                     <p> 1.<i> глаг. </i> Коала </p>                                     
                              <div class="card border-info">
                                  <div class="card-body">
                                      <blockquote class="card-blockquote">
-
+                                         <a  href="#collapse4" data-toggle="collapse"> <p> Примеры </p></a>
+                                         <div id="collapse4" class="collapse">
                                          <div class="media">
 
                                              <div class="embed-responsive embed-responsive-16by9">                   
@@ -224,37 +195,40 @@
 
                                                  </iframe>
                                              </div>
+                                         </div>
                                          </div>
                                      </blockquote>
                                  </div>
                              </div>
-                         </div>
-                     </div> 
+                         
+                  
                                  
                      <p> 2.1 <i> сущ. разг. </i> Еда  </p>
                      
-                        <a  href="#collapse2" data-toggle="collapse"> <p align="center">Формы </p></a>
+                        
                     
-                     <div id="collapse2" class="collapse">
-                         
+                     
+                                                  
                              <div class="card border-info">
                                  <div class="card-body">
                                      <blockquote class="card-blockquote">
-
+                                         <a  href="#collapse2" data-toggle="collapse"> <p>Формы </p></a>
+                                         <div id="collapse2" class="collapse">
                                          <div class="media">
-
-                                             <div class="embed-responsive embed-responsive-16by9">                   
+                                             
+                                            <div class="embed-responsive embed-responsive-16by9">                   
                                                  <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen>
 
 
                                                  </iframe>
                                              </div>
                                          </div>
+                                         </div> 
                                      </blockquote>
                                 
                              </div>
                          </div>
-                     </div> 
+                     
                                
                      <br><br><p> 2.2 <i> сущ. Новосиб. </i> Суп </p>
                        </blockquote>
@@ -265,14 +239,12 @@
                                     <h4><a  href="#collapse3" data-toggle="collapse"> Этимология </a></h4>
                        
                          <div id="collapse3" class="collapse">
-                            Заимствование из французского <a href='#'>"Красотка"</a>
+                            Заимствование из французского "Красотка"
+                            <p>см. <a href='#'>красотка</a></p> 
                          </div>
-                         <br><br>
+                         
 
-                        <h4>  Составные части, морфология </h4>
-                            <p> </p>
-
-                      
+                       
                      </div>
 
           
